# qga-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: knapsack_demo.py  tsp_bruteforce.py  tsp_demo.py
src/qga/: __init__.py  binary.py  permutation.py  result.py
tests/: test_binary.py  test_permutation.py
